# testpilot

./: .env  .env.example  .gitignore  AI_CORE_CLEANUP_SUMMARY.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  HYBRID_DEPLOYMENT.md  QUICKSTART.md  README.md  RUNBOOK_LOCAL_WITH_RENDER_GATEWAY.md  SECURITY_UI_IMPLEMENTATION.md  TUNNEL_MODE_STATUS.md  ai_optimization_report.md  build_ai_core_clean.ps1  build_rust_backend.ps1  build_rust_backend.sh  deploy.sh  docker-compose.yml  dummy.txt  extract_render_env.py  lock_existing_tunnels.ps1  package-lock.json  package.json  render.yaml  render_tunnel_env.txt  runtime.md  setup-tunnels.sh  sonarqube_auth_bootstrap.py  start.ps1  start.sh  start_local_stack.ps1  start_tunnels.ps1  test_tunnels.py  tsconfig.base.json  tunnel.lock.env  tunnel.md  tunnel_pids.txt  turbo.json  vercel-ignore-build.sh  (+2 more)
.github/: copilot-instructions.md  secret_scanning.yml
_smoke_vuln/: firebase.ts
adapters/vscode/: fixCodeLensProvider.ts  gitController.ts  gitHelper.ts  inlineDiffManager.ts  stagingManager.ts
clients/vscode/: package-lock.json  package.json  tsconfig.json
clients/web-dashboard/: .env.example  next.config.js  package-lock.json  package.json  tsconfig.json
docker/: Dockerfile.pr-agent
services/ai-core/: .pr_agent.toml  API_ONLY_README.md  Dockerfile  check_key.py  check_sonar.py  debug_models.py  debug_sonar.py  requirements.txt  setup_sonar_token.py  (+3 more)
services/sonar-scanner/: .dockerignore  Cargo.toml  Dockerfile  README.md
services/sonar-scanner/.cargo/: config.toml
services/sonar-scanner/src/: main.rs
(+522 files in other folders)
